# Learning

./: README.md
DataScience/00/: Task1.py  Task2.py
Jenkins/: Dockerfile  run.bash
src/BotSchool/: Bot.py
src/CPP/: ExponentialSearch.cpp  ExponentialSearch.h  Makefile  SuffixTree.cpp  SuffixTree.h  TestSuffixTree.cpp
src/CPP/BinaryTree/: Bin.cpp  BinaryTree.cpp  BinaryTree.h  Makefile
src/CPP/ExponentialSearchString/: ExponentialSearch.cpp  ExponentialSearch.h  Makefile  TestExponentialSearch.cpp
src/CPP/Graph/UnionFind/: UnionFind.cpp  UnionFind.h  testUnionFind.cpp
src/CPP/Labyrinth/: CMakeLists.txt  main.cpp
src/CPP/Labyrinth/Model/: Labyrinth.cpp  Labyrinth.h
src/CPP/Navigator/: CMakeLists.txt
src/CPP/Navigator/Graph/: a.out  graph.cpp  graph.h  graph_out.txt  test_graph.cpp
src/CPP/Navigator/GraphAlgorithms/: GraphAlgorithms.cpp  GraphAlgorithms.h  test1.txt  test_graph_algorithms.cpp
src/CPP/Navigator/Interface/: Interface.cpp  Interface.h
src/CPP/Navigator/libs/: s21_containerAdaptor.h
src/CPP/SuffixTree/: Makefile  SuffixTree.cpp  SuffixTree.h  TestSuffixTree.cpp
src/CPPMonitoring/: Makefile  README.md
src/CPPMonitoring/Model/CPU_agent/: CPU_agent.cpp  config.conf
src/CPPMonitoring/Model/Headers/: CPU_agent.hpp  MEM_agent.hpp  NET_agent.hpp
src/CPPMonitoring/Model/MEM_agent/: MEM_agent.cpp  config.conf
src/CPPMonitoring/Model/NET_agent/: NET_agent.cpp
src/CPPMonitoring/Tests/: test_CPU.cpp  test_MEM.cpp  test_NET.cpp
src/CommonPython/AutoLogin/: AutoLogin.py  main.py  requirements.txt
src/CommonPython/dadata/: auxiliary.py  main.py  settings.py
src/CommonPython/pyth_03/: evilcorp_hacked.html  gen_ansible.py  todo.yml
src/CommonPython/pyth_03/scripts/: consumer.py  exploit.py  producer.py
src/CommonPython/pyth_04/: credentials.py  doctors.py  screwdriver.py
src/CommonPython/pyth_04/screwdriver/: manage.py
src/CommonPython/pyth_05/part_01/: python_client.py  python_server.py  server_pb2.py  server_pb2_grpc.py
src/CommonPython/pyth_06/: Makefile  docker-compose.yml  start.sh
src/CommonPython/pyth_06/api/: __init__.py  api.py  client.py
src/CommonPython/pyth_06/input/: Dockerfile  (+2 more)
src/CommonPython/pyth_07/: crawler.py  fight.py
src/DataScience/00/: Task3.py
src/DjangoPython/FirstTry/: db.sqlite3  pyvenv.cfg
src/LeetCode/: Array101.py  Solution.py
src/Monitoring/part_01/: creation.sh  main.sh  validation.sh
src/Monitoring/part_02/: creation.sh  main.sh  validation.sh
src/Monitoring/part_03/: date_delete.sh  date_time_input.sh  date_validation.sh  log_delete.sh  main.sh  test.sh
src/Monitoring/part_04/: Makefile  codes.txt  log_generator.c
src/Monitoring/part_05/: main.sh
src/Monitoring/part_06/: index.html  main.sh  readme.txt
src/Monitoring/part_07/: GRAFANA_MONITORING.json  install_grafana.sh  install_node_exporter.sh  install_prometheus.sh  prometheus.service  prometheus.yml  start.sh
src/Monitoring/part_09/: Makefile  exporter.c  install_moy_exporter.sh  metric.html  moy_exporter.service  nginx.conf  prometheus.yml  start.sh
src/Telegram/YaBot/: main.py
src/Useful/: BinarySearch.py  LongestSubstring.py  Matrix.py  PermutationInclusion.py  SearchInsert.py  Vector.py  Vectors.py
src/Useful/BinaryTree/: BinaryTree.py  test_binary_tree.py
src/Useful/LinkedList/: LinkedList.py  test_linked_list.py
src/Useful/PythonSorting/: Sorting.py  test_sorting.py
src/packaging/: doctor_package.bash
(+57 files in other folders)
